Fix header links alignment and divide main text from main image

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
     width: auto;
     padding: 0px;
     justify-content: space-around;
+    align-items: center;
     gap: 20px;
 }
 
@@ -55,7 +56,12 @@ body {
     display: flex;
 }
 
-
+.main-text {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    
+}
 
 .main img {
     height: auto;
@@ -77,10 +83,12 @@ body {
     background-color: #3882F6;
     color: white;
     font-weight: bold;
+    
 }
 
 .info {
     height: 20vh;
+    display: flex;
 }
 
 .info img {
@@ -97,6 +105,7 @@ body {
 .quote {
     background-color: #E5E7EB;
     height: 20vh;
+    display: flex;
 }
 
 .quote p {
@@ -113,6 +122,7 @@ body {
 .cta {
     background-color: white;
     height: 20vh;
+    display: flex;
 }
 
 .cta.container {
@@ -138,4 +148,5 @@ body {
     margin-top: auto;
     color: white;
     height: 10vh;
+    display: flex;
 }
